# ceci

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  Dockerfile  LICENSE  README.md  do_cover.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
ceci/: __init__.py  __main__.py  argparser.py  command_line_tool.py  config.py  configs.py  errors.py  executor.py  file_types.py  graph.py  handle.py  main.py  minirunner.py  monitor.py  pipeline.py  shifter.py  stage.py  test_cmd.py  test_main.py  test_minirunner.py  test_stage.py  test_utils.py  update_pipelines_for_ceci_2.py  utils.py
ceci/pipeline/: __init__.py  cwl.py  dry_run.py  file_manager.py  flow_chart.py  graph.py  mini.py  parsl.py  pipeline.py  sec.py  templates.py
ceci/provenance/: __init__.py  errors.py  git.py  provenance.py  utils.py
ceci/sites/: __init__.py  ccin2p3.py  cori.py  cori_interactive.py  local.py  nersc.py  site.py
ceci/tools/: ancestors.py
ceci_example/: __init__.py  __main__.py  example_stages.py  types.py
ceci_example_namespace/: example_stages.py
cwl/: PZEstimationPipe.cwl  SysMapMaker.cwl  WLGCRandoms.cwl  WLGCSelector.cwl  WLGCTwoPoint.cwl  cwl_inputs.yml  pipeline.cwl  shearMeasurementPipe.cwl
docs/: Makefile  api.rst  conf.py  config.rst  config2.rst  index.rst  installation.rst  launchers.rst  overview.rst  sites.rst  stages.rst  tutorial.rst
nb/: ceci_interactive_example.ipynb
pipette/: __init__.py  base.py  launchers.py  main.py  pipeline.py  stage.py  types.py
pipette_lib/: __init__.py  twopoint_stage.py  types.py  wl_apps.py
test/: config.yml  cori.yaml  setup-cori  setup-local  test-pipeline.py  test-stage.py  test.yml  test_manual.py
test/cwl/: SourceSummarizer.cwl  WLGCCov.cwl  WLGCSummaryStatistic.cwl  cwl_inputs.yml
tests/: config.yml  config_nm.yml  create_registry_entries.py  template.yml  test.hdf5  test.yml  test_cmd.py  test_dask.py  test_dataregistry.yml  test_executables.py  test_flow_chart.py  test_graph.py  test_helpers.py  test_interactive.py  test_io.py  test_main.py  test_minirunner.py  test_monitor.py  test_namespace.yml  test_pipeline.py  test_provenance.py  test_python_paths.py  test_site.py  test_snapshot.py  test_stage.py  test_update_script.py  test_utils.py
tests/update_test_files/: config.yml  pipeline1.yml  pipeline2.yml
