[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]

build-backend = "setuptools.build_meta"

[project]
name = "ceci"
description = "Lightweight pipeline engine for LSST DESC"
readme = "README.md"
urls = {homepage = "https://github.com/LSSTDESC/ceci"}
authors =[{name = "Joe Zuntz"}]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dynamic = ["version"]

dependencies =[
    "pyyaml >= 5.1",
    "psutil",
    'graphlib_backport ; python_version < "3.9"',
]



[tool.setuptools_scm]
# This activates use_scm_version to get the version number from git tags.
write_to = "ceci/_version.py"

[tool.setuptools]
packages = [
    "ceci",
    "ceci.sites",
    "ceci.tools",
]


[project.scripts]
ceci = "ceci.main:main"
ceci-update-for-version-2 = "ceci.update_pipelines_for_ceci_2:main"
ceci-ancestors = "ceci.tools.ancestors:main"

[project.optional-dependencies]

parsl = [
    "parsl >= 1.0.0",
    "flask",
]

cwl = [
    "cwlref-runner",
    "cwl-utils",
]

viz = [
    "pygraphviz"
]

dask = [
    "dask[distributed] >= 2023.5.0",
    "dask_mpi >= 2022.4.0",
]

test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mockmpi",
    "h5py",
    "dask[distributed]",
]

all = [
    "parsl >= 1.0.0",
    "flask",
    "cwlref-runner",
    "cwl-utils",
    "pygraphviz",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mockmpi",
    "h5py",
    "dask[distributed] >= 2023.5.0",
    "dask_mpi >= 2022.4.0",
]
